# falcon

./: .clang-format  .gitattributes  .gitignore  ABOUT.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakeOptions.txt  CMakePresets.json  DESCRIPTION.md  README.md  README_CN.md  README_CURRENT.md  build.sh  convert_ico.py  package-lock.json  test_download_integration.py  test_simple_download  test_simple_download.cpp  todo.md  vcpkg.json
.claude/: index.json
.github/workflows/: ci.yml  cmake-multi-platform.yml  docs-check.yml  docs-deploy.yml  nightly-build.yml  release.yml
apps/browser_extension/: README.md  manifest.json  service_worker.js
apps/browser_extension/_locales/en/: messages.json
apps/browser_extension/_locales/zh_CN/: messages.json
apps/browser_extension/options/: options.css  options.html  options.js
apps/browser_extension/popup/: popup.css  popup.html  popup.js
apps/desktop/: CLAUDE.md  CMakeLists.txt  Info.plist.in  README.md  resources.qrc
apps/desktop/i18n/: falcon_desktop_zh_CN.ts
apps/desktop/resources/styles/: main.qss
apps/desktop/resources/windows/: app.rc
apps/desktop/src/: main.cpp  main_window.cpp  main_window.hpp  styles.hpp
apps/desktop/src/dialogs/: add_download_dialog.cpp  add_download_dialog.hpp
apps/desktop/src/ipc/: http_server.cpp  http_server.hpp
apps/desktop/src/navigation/: sidebar.cpp  sidebar.hpp
apps/desktop/src/pages/: cloud_page.cpp  cloud_page.hpp  discovery_page.cpp  discovery_page.hpp  download_page.cpp  download_page.hpp  settings_page.cpp  settings_page.hpp
apps/desktop/src/services/: search_service.cpp  search_service.hpp  storage_service.cpp  storage_service.hpp
apps/desktop/src/utils/: clipboard_monitor.cpp  clipboard_monitor.hpp  theme_manager.cpp  theme_manager.hpp  url_detector.cpp  url_detector.hpp
apps/desktop/src/widgets/: status_bar.cpp  status_bar.hpp  top_bar.cpp  top_bar.hpp
apps/web/: CLAUDE.md  README.md
cmake/: Dependencies.cmake  FalconConfig.cmake.in
config/: search_engines.json
docs/: .gitignore  ARCHIVE.md  README.md  README_NEW.md  api_guide.md  aria2_architecture.md  aria2c-migration-plan.md  cloud_protocol_design.md  developer_guide.md  feature_comparison_report.md  package-lock.json  package.json  pnpm-lock.yaml  private_protocols.md  protocol_support.md  protocols_guide.md
docs/src/: README.md  faq.md  index.md
docs/src/.vitepress/: config.mts
docs/src/.vuepress/: config.ts  navbar.ts  sidebar.ts  theme.ts
docs/src/api/: README.md  core.md  events.md  index.md  plugins.md
docs/src/developer/: README.md  architecture.md  coding-standards.md  debugging.md  desktop-redesign.md  index.md  plugins.md  release.md  testing.md
docs/src/guide/: README.md  getting-started.md  index.md  installation.md  usage.md
docs/src/protocols/: README.md  bittorrent.md  ftp.md  http.md  index.md  private.md  streaming.md
docs/src/public/: .gitkeep
examples/: CMakeLists.txt  README.md  aria2_style_download.cpp  private_protocols_demo.cpp  simple_download.cpp  test_http_download.cpp
scripts/: generate_test_report.py  package-macos.sh  run_all_tests.sh
